sumo/tests/traci/MoveNode/InvalidPositionFormat/net_state.traci
<?xml version="1.0"?>

<!-- generated on 12/12/08 16:04:55 by SUMO sumo Version dev-SVN-r6410
<configuration>

   <input>
      <net-file>net.net.xml</net-file>
      <route-files>routes.rou.xml</route-files>
   </input>

   <output>
      <netstate-dump>netstate_dump.xml</netstate-dump>
   </output>

   <processing>
      <no-step-log>true</no-step-log>
   </processing>

   <traffic_control_interface_(traci)_server>
      <remote-port>8826</remote-port>
      <penetration>1</penetration>
   </traffic_control_interface_(traci)_server>

</configuration>
-->

<sumo-netstate>
   <timestep time="0">
      <edge id="e_m4">
         <lane id="e_m4_0">
            <vehicle id="veh0" pos="0.00" speed="10.00"/>
         </lane>
         <lane id="e_m4_1"/>
         <lane id="e_m4_2"/>
      </edge>
      <edge id="e_m5">
         <lane id="e_m5_0">
            <vehicle id="veh1" pos="0.00" speed="10.00"/>
         </lane>
         <lane id="e_m5_1"/>
         <lane id="e_m5_2"/>
      </edge>
   </timestep>
   <timestep time="1">
      <edge id="e_m4">
         <lane id="e_m4_0">
            <vehicle id="veh0" pos="10.00" speed="10.00"/>
         </lane>
         <lane id="e_m4_1"/>
         <lane id="e_m4_2"/>
      </edge>
      <edge id="e_m5">
         <lane id="e_m5_0">
            <vehicle id="veh1" pos="10.00" speed="10.00"/>
         </lane>
         <lane id="e_m5_1"/>
         <lane id="e_m5_2"/>
      </edge>
   </timestep>
</sumo-netstate>
